Fixed bug #27598 (list() array key assignment causes HUGE memory leak)